<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/plImageView"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/plDateTextView"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/plPlaceNameTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plImageView" />

    <TextView
        android:id="@+id/plPlaceNameTextView"
        android:layout_width="209dp"
        android:layout_height="49dp"
        android:layout_marginTop="1dp"
        android:text="@string/placename"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/plImageView" />

    <TextView
        android:id="@+id/plComentTextView"
        android:layout_width="411dp"
        android:layout_height="74dp"
        android:text="@string/comment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plPlaceNameTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>